# VINS-Mono

./: .gitignore
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml
config/tx2/: tx2.yaml
vins_estimator/launch/: tx2.launch
vins_estimator/src/: estimator_node.cpp
vins_estimator/src/utility/: visualization.cpp  visualization.h
vins_mono/: CMakeLists.txt  package.xml
